# LLM_summary

./: .env  .gitignore  README.md  api_utils.py  config.yaml  csv_to_jsonl_converter.py  guide.md  integ_gpt_analysis.py  m01_crawling_naver_yaml.ipynb  m01_gpt_senti.ipynb  m01_gpt_senti_tuned.ipynb  m02_dataprep_yaml.ipynb  m02_gpt_theme.ipynb  m03_gpt_senti_tuned.ipynb  m03_issuecount.ipynb  packages.txt  pyproject.toml  requirements.txt  requirements_win.txt  task01_LLM_topic_sentiment_analysis.html  task01_LLM_topic_sentiment_analysis.ipynb  task02_opportunity_score_extraction.html  task02_opportunity_score_extraction.ipynb  task02_opportunity_value_extraction.ipynb
utils/: __init__.py  api_utils.py  data_utils.py
(extra)/: csv_to_jsonl_converter.ipynb  data_utils.py
backup/: config_backup.yaml  m01_crawling_naver.ipynb  m02_gpt_theme.ipynb  m03_gpt_senti.ipynb  prompt_config.yaml
data/: S2_감성테마_네이버쇼핑리뷰.csv  S3_기회영역값_블로그카페.csv  test241114.csv  test_trainset_fine_tuning.jsonl  trainset_fine_tuning.csv  trainset_fine_tuning.jsonl
old/: m02_dataprep.ipynb  m03_openai.ipynb
result/: result_apply_20240920_insight_Paprika Story_20240603.xlsx  result_naver_api_parsed.csv  result_naver_review_parsed.csv  result_pap_blog_parsed.xlsx  result_pap_cafe_parsed.csv  result_pap_cafe_parsed.xlsx  result_step2_240923.pickle  result_test_20240920_insight_Paprika Story_20240603.xlsx  제공_네이버쇼핑리뷰_S1_감성분석.xlsx  제공_네이버쇼핑리뷰_S2_batch100_감성테마.pkl  제공_네이버쇼핑리뷰_S2_batch100_감성테마.xlsx  제공_네이버쇼핑리뷰_S2_감성테마.xlsx  제공_네이버쇼핑리뷰_S3_batch100_기회영역값.xlsx  제공_네이버쇼핑리뷰_감성테마_batch100_test1.xlsx  (+1 more)
(+39 files in other folders)
